--- a/currenc/index.html
+++ b/currenc/index.html
@@ -11,6 +11,7 @@
     <meta name="author" content="BlueMatrix">
     <meta name="theme-color" content="#ff5354">
 
+    <link rel="shortcut icon" href="images/currenc-icon-48x48.png">
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed:100|Source+Sans+Pro:200" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="manifest" href="./manifest.json">
