--- a/currenc/index.html
+++ b/currenc/index.html
@@ -70,7 +70,7 @@
             <ul class="currencies"></ul>
         </div>
 
-        <div id="convert-button" class="absolute">
+        <div id="center-button" class="absolute">
             <span></span>
         </div>
 
@@ -87,7 +87,7 @@
                 <li class="key"><a data-value="9">9</a></li>
                 <li class="key"><a data-value=".">.</a></li>
                 <li class="key"><a data-value="0">0</a></li>
-                <li class="key"><a data-value="convert"><span></span></a></li>
+                <li id="convert-button" class="key"><a data-value="convert" class="relative"><span></span></a></li>
             </ul>
         </div>
 
