restructured keypad step1

--- a/currenc/index.html
+++ b/currenc/index.html
@@ -76,6 +76,9 @@
         </div>
 
         <div id="keypad" class="absolute animated">
+            <div class="header">
+                <span class="back__button"></span>
+            </div>
             <ul class="number__keypad">
                 <li class="key"><a data-value="1">1</a></li>
                 <li class="key"><a data-value="2">2</a></li>
