--- a/currenc/index.html
+++ b/currenc/index.html
@@ -77,7 +77,14 @@
 
         <div id="keypad" class="absolute animated">
             <div class="header">
-                <span class="back__button"></span>
+                <button class="close__button">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="6.82666in" style="shape-rendering:geometricPrecision;text-rendering:geometricPrecision;image-rendering:optimizeQuality;fill-rule:evenodd;clip-rule:evenodd;width: 24px;height: 24px;" viewBox="0 0 6.82666 6.82666" width="6.82666in" xml:space="preserve">
+                        <g id="Layer_x0020_1">
+                            <path class="fil0" d="M5.91083 1.2175c0.0833031,-0.0833031 0.0833031,-0.218366 0,-0.301669 -0.0833031,-0.0833031 -0.218366,-0.0833031 -0.301669,0l-4.69334 4.69333c-0.0833031,0.0833031 -0.0833031,0.218366 0,0.301669 0.0833031,0.0833031 0.218366,0.0833031 0.301669,0l4.69334 -4.69333z"/><path class="fil0" d="M1.2175 0.915827c-0.0833031,-0.0833031 -0.218366,-0.0833031 -0.301669,0 -0.0833031,0.0833031 -0.0833031,0.218366 0,0.301669l4.69334 4.69333c0.0833031,0.0833031 0.218366,0.0833031 0.301669,0 0.0833031,-0.0833031 0.0833031,-0.218366 0,-0.301669l-4.69334 -4.69333z"/>
+                        </g>
+                        <rect class="fil1" height="6.82666" width="6.82666"/>
+                    </svg>
+                </button>
             </div>
             <ul class="number__keypad">
                 <li class="key"><a data-value="1">1</a></li>
@@ -112,5 +119,6 @@
 <script src="./js/app.js"></script>
 <script src="./js/toast.js"></script>
 <script src="./js/offline.js"></script>
+<!--<script src="./js/ripple.js"></script>-->
 </body>
 </html>
