--- a/currenc/index.html
+++ b/currenc/index.html
@@ -119,6 +119,6 @@
 <script src="./js/app.js"></script>
 <script src="./js/toast.js"></script>
 <script src="./js/offline.js"></script>
-<!--<script src="./js/ripple.js"></script>-->
+<script src="./js/a2hs.js"></script>
 </body>
 </html>
