added pointer class to keypad trigger

--- a/currenc/index.html
+++ b/currenc/index.html
@@ -43,7 +43,7 @@
 
     <div class="app__content">
         <div id="exchange-main-container">
-            <div id="base-currency-wrapper">
+            <div id="base-currency-wrapper" class="pointer">
                 <div class="base__currency relative">
                     <div class="base__currency__name" id="USD">United States Dollar </div>
                     <div id="input-wrapper" class="relative">
