--- a/currenc/index.html
+++ b/currenc/index.html
@@ -155,7 +155,7 @@
                         <span class="key">B</span>
                         <span class="key">N</span>
                         <span class="key">M</span>
-                        <span class="key" data-key="delete">
+                        <span class="key" data-key="delete" data-long-press-delay="1000">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 511.374 511.374" style="enable-background:new 0 0 511.374 511.374;" xml:space="preserve" width="24px" height="24px">
                                 <g>
                                     <path d="M433.134,47.687h-213.28c-37.109,0.21-72.235,16.778-96,45.28l-1.44,1.6l-115.2,140.8c-9.619,11.779-9.619,28.701,0,40.48 l115.36,141.92c23.6,28.794,58.771,45.618,96,45.92h216.16c41.414-2.536,74.363-35.691,76.64-77.12c0-0.96,0-1.92,0-2.88v-257.12 C510.781,83.499,476.196,48.631,433.134,47.687z M447.374,382.567c-0.428,9.583-8.327,17.13-17.92,17.12h-208 c-19.662,0.779-38.49-7.979-50.56-23.52l-98.24-120.48l97.92-119.68c11.851-15.727,30.553-24.78,50.24-24.32h209.6 c11.04,0,16,6.4,16.96,16V382.567z" fill="#fff" style="stroke-width:24px;stroke:#333638;"></path>
@@ -190,6 +190,7 @@
     <script src="./js/toast.js"></script>
     <script src="./js/offline.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/long_press.js"></script>
 </body>
 
 </html>
