removed service worker and some other files

--- a/currenc/index.html
+++ b/currenc/index.html
@@ -185,6 +185,7 @@
         </div>
     </div>
 
+    <script src="cordova.js"></script>
     <script src="./js/idb.js"></script>
     <script src="./js/numeral.min.js"></script>
     <script src="./js/toast.js"></script>
