--- a/currenc/index.html
+++ b/currenc/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
-    <title>PWA Currency Converter</title>
+    <title>Currency Converter Pro</title>
 
     <meta name="description" content="Currency Converter project submitted in the ALC #7DaysofCodeChallenge.">
     <meta name="author" content="BlueMatrix">
@@ -38,8 +38,9 @@
                                 <span>United States Dollar</span>
                             </div>
                             <div id="input-wrapper" class="">
+                                <span class="entries"></span>
                                 <input type="text" id="convert-from" name="convert-from" value="100" class="pointer">
-                                <label class="absolute hidden" for="convert-from">$</label>
+                                <label class="absolute" for="convert-from">USD</label>
                             </div>
                         </div>
                     </div>
@@ -73,7 +74,7 @@
                 </div>
 
                 <div id="switch-button" class="absolute pointer">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="128px" id="Layer_1" style="enable-background:new 0 0 128 128;width:32px;height:32px;" version="1.1" viewBox="0 0 128 128" width="128px" xml:space="preserve">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="128px" id="Layer_1" style="enable-background:new 0 0 128 128;width:32px;height:32px;margin:auto;" version="1.1" viewBox="0 0 128 128" width="128px" xml:space="preserve">
                         <g>
                             <g>
                                 <line style="fill:none;stroke: #d04647;stroke-width:12;stroke-linecap:square;stroke-miterlimit:10;" x1="63.185" x2="37.821" y1="84.061" y2="109.423"></line>
@@ -106,16 +107,35 @@
                         <li class="key"><a data-value="7">7</a></li>
                         <li class="key"><a data-value="8">8</a></li>
                         <li class="key"><a data-value="9">9</a></li>
+                        <li class="key having__border disabled"><a class="ops" data-ops="divide" data-value="÷">÷</a></li>
+                        <li class="key having__border disabled"><a class="ops" data-ops="multiply" data-value="×">×</a></li>
                         <li class="key"><a data-value="4">4</a></li>
                         <li class="key"><a data-value="5">5</a></li>
                         <li class="key"><a data-value="6">6</a></li>
+                        <li class="key having__border disabled"><a class="ops" data-ops="add" data-value="+">+</a></li>
+                        <li class="key having__border disabled"><a class="ops" data-ops="minus" data-value="−">−</a></li>
                         <li class="key"><a data-value="1">1</a></li>
                         <li class="key"><a data-value="2">2</a></li>
                         <li class="key"><a data-value="3">3</a></li>
-                        <li class="key"><a data-value="00">00</a></li>
+                        <li class="key having__border stretched disabled"><a data-reset="equals">=</a></li>
+                        <li class="key disabled"><a data-value="00">00</a></li>
                         <li class="key"><a data-value="0">0</a></li>
                         <li class="key"><a data-value=".">.</a></li>
-                        <li id="do-conversion" class="key"><a data-value="convert" class="relative"><span></span></a></li>
+                        <li class="key having__border disabled">
+                            <a data-reset="clear">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+                                    <path id="c" class="cls-1" d="M21.395,28.158a6.531,6.531,0,0,1-.973-3.7V23.969a6.493,6.493,0,0,1,.973-3.668,3.314,3.314,0,0,1,2.965-1.465,3.487,3.487,0,0,1,2.438.908,3.131,3.131,0,0,1,1,2.432h1.254l0.023-.07a4.02,4.02,0,0,0-1.312-3.234,4.875,4.875,0,0,0-3.4-1.23,4.732,4.732,0,0,0-3.937,1.781,7.115,7.115,0,0,0-1.406,4.547v0.492a7.113,7.113,0,0,0,1.412,4.559A4.747,4.747,0,0,0,24.371,30.8a5.046,5.046,0,0,0,3.316-1.184,3.539,3.539,0,0,0,1.383-2.941l-0.023-.07H27.793a2.636,2.636,0,0,1-1.037,2.215,3.806,3.806,0,0,1-2.385.8A3.33,3.33,0,0,1,21.395,28.158Z"/>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="key having__border disabled">
+                            <a data-reset="delete">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+                                    <path id="del" class="cls-1" d="M13.792,27.063a4.658,4.658,0,0,0,.875,2.949,2.9,2.9,0,0,0,2.422,1.121A3.058,3.058,0,0,0,18.5,30.82a2.742,2.742,0,0,0,1.023-.922l0.234,1.07h1.18V18.781H19.4V23.43a2.7,2.7,0,0,0-.98-0.8,3.028,3.028,0,0,0-1.316-.273,2.807,2.807,0,0,0-2.441,1.25,5.641,5.641,0,0,0-.871,3.289v0.164Zm1.539-.164a4.718,4.718,0,0,1,.527-2.375,1.759,1.759,0,0,1,1.637-.914,2.034,2.034,0,0,1,1.137.309,2.372,2.372,0,0,1,.77.832V28.7a2.333,2.333,0,0,1-.766.875,2.038,2.038,0,0,1-1.156.313,1.828,1.828,0,0,1-1.625-.77,3.588,3.588,0,0,1-.523-2.051V26.9Zm13.6,3.934a3.7,3.7,0,0,0,1.2-.738l-0.6-1a3.06,3.06,0,0,1-1.012.613,3.871,3.871,0,0,1-1.371.223,1.965,1.965,0,0,1-1.719-.793,3.494,3.494,0,0,1-.562-2.066l0.023-.039h5.406V26.219a4.345,4.345,0,0,0-.848-2.8,3.067,3.067,0,0,0-2.543-1.055,3.3,3.3,0,0,0-2.566,1.191,4.386,4.386,0,0,0-1.051,3.012v0.344a4.48,4.48,0,0,0,1.02,3.063,3.576,3.576,0,0,0,2.84,1.164A4.763,4.763,0,0,0,28.926,30.832Zm-0.633-6.66a2.462,2.462,0,0,1,.453,1.523V25.82H24.934l-0.016-.039a2.938,2.938,0,0,1,.645-1.59,1.673,1.673,0,0,1,1.332-.621A1.638,1.638,0,0,1,28.293,24.172Zm5.783-5.391H32.537V30.969h1.539V18.781Z"/>
+                                </svg>
+                            </a>
+                        </li>
+                        <li id="do-conversion" class="key absolute having__border"><a data-ops="convert" class="relative"><span></span></a></li>
                     </ul>
                 </div>
 
@@ -176,7 +196,7 @@
                     </div>
                 </div>
 
-                <div class="loader absolute">
+                <div class="loader">
                     <div class="ball-scale-multiple">
                         <div></div>
                         <div></div>
